--- a/css/styles.css
+++ b/css/styles.css
@@ -6097,7 +6097,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #FF0000 !important;
+  background-color: #F0AAAA !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
