--- a/css/styles.css
+++ b/css/styles.css
@@ -10030,8 +10030,8 @@ p.lead {
 }
 
 .subheading {
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  text-transform: uppercase;
+  font-family: "Noto Sans TC", sans-serif;
+  text-transform: none;
   font-weight: 500;
   font-size: 1.5rem;
 }
